--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 			</div>
 			<div class="row tight-width-whitespace portfolio-row">
 				<div class="col-sm-6">
-					<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Photographie de plusieurs journaux ouverts posés les uns sur les autres" class="img-responsive portfolio-thumb" /></a>
+					<a href="#" data-lightbox="img/1.avif" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.avif" alt="Photographie de plusieurs journaux ouverts posés les uns sur les autres" class="img-responsive portfolio-thumb" /></a>
 					<h3 class="mg-md text-center">
 						Refonte d'un site web pour un journal local
 					</h3>
@@ -172,7 +172,7 @@
 					</p>
 				</div>
 				<div class="col-sm-6">
-					<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Photographie représentant une photographe prennant des photos." /></a>
+					<a href="#" data-lightbox="img/2.avif" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.avif" class="img-responsive portfolio-thumb" alt="Photographie représentant une photographe prennant des photos." /></a>
 					<h3 class="mg-md text-center">
 						Création d'un site web pour photographes
 					</h3>
@@ -183,7 +183,7 @@
 			</div>
 			<div class="row tight-width-whitespace portfolio-row">
 				<div class="col-sm-6">
-					<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Photographie du matériel informatique, audio et vidéo qui pourrait être utilisé par un voyageur"/></a>
+					<a href="#" data-lightbox="img/3.avif" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.avif" class="img-responsive portfolio-thumb" alt="Photographie du matériel informatique, audio et vidéo qui pourrait être utilisé par un voyageur"/></a>
 					<h3 class="mg-md text-center">
 						Création d'un site internet pour un voyageur
 					</h3>
@@ -192,7 +192,7 @@
 					</p>
 				</div>
 				<div class="col-sm-6">
-					<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Photographie d'un bureau où deux personnes semblent travailler sur des invitaitons de mariage."/></a>
+					<a href="#" data-lightbox="img/4.avif" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.avif" class="img-responsive portfolio-thumb" alt="Photographie d'un bureau où deux personnes semblent travailler sur des invitaitons de mariage."/></a>
 					<h3 class="mg-md text-center">
 						Conception d'un site pour une agence de mariage
 					</h3>
