--- a/index.html
+++ b/index.html
@@ -2,22 +2,23 @@
 <html lang="fr-fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-    <meta name="description" content="">
+	<!--Bonus: suppression + ajouts de mots-clés-->
+    <meta name="keywords" content="agence design, agence design Lyon, web design, webdesigner, CSS design, design site web, site internet design, agence web design, agence web design Lyon, sites design, entreprise web design, entreprise web design Lyon, site web, site internet">
+    <meta name="description" content="Le meilleur du web design dans notre agence à Lyon ! La Chouette Agence aide votre entreprise à être attractive et visible sur Internet en vous proposant un design qui vous correspond.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap-min.css">
+	<link rel="stylesheet" type="text/css" href="style-min.css">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome-min.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line-min.css">
 	
     
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js"></script>
+	<script src="./js/jquery-2.1.0-min.js"></script>
+	<script src="./js/bootstrap-min.js"></script>
+	<script src="./js/blocs-min.js"></script>
+	<script src="./js/jquery.touchSwipe-min.js" defer></script>
+	<script src="./js/gmaps-min.js"></script>
 
     <title>Le web design à Lyon - La Chouette Agence</title>
 
@@ -38,7 +39,7 @@
 		<nav class="navbar row">
 			<div class="navbar-header">
 				<!--Suppression des mots-clés invisibles-->
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo de l'agence de web design La Chouette Agence" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.avif" alt="Logo de l'agence de web design La Chouette Agence" height="40" /></a>
 				<!--Suppression des mots-clés invisibles-->
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
@@ -49,8 +50,7 @@
 					<li>
 						<a href="index.html">Accueil</a>
 					</li>
-					<li>
-					</li>
+					<!--Bonus: suppression <li> vide-->
 					<li>
 						<a href="page2.html">page2 &gt;</a>
 					</li>
@@ -67,7 +67,7 @@
 		<div class="container bloc-lg">
 			<div class="row tight-width-whitespace">
 				<div class="col-sm-12">
-					<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo de l'agence de web design La Chouette Agence" />
+					<img src="img/logo.avif" class="center-block image-resize-mode" width="100" alt="Logo de l'agence de web design La Chouette Agence" />
 					<h1 class="text-center hero-bloc-text tc-white ">
 						La chouette agence.
 					</h1>
@@ -232,22 +232,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="index.html" aria-label="Notre compte Twitter"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="index.html" aria-label="Notre compte Facebook"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="index.html" aria-label="Notre compte Dribbble"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="index.html" aria-label="Notre compte Instagram"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 					<!--Suppression des mots-clés invisibles-->
