--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 					</li>
 					<!--Bonus: suppression <li> vide-->
 					<li>
-						<a href="page2.html">page2 &gt;</a>
+						<a href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
