--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					</li>
 					<!--Bonus: suppression <li> vide-->
 					<li>
-						<a href="contact.html".html">Contact</a>
+						<a href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
